# cactus-ui

./: .gitignore  .sampleenv  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linttest.yml
frontend/: .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: home.spec.ts  playlists.spec.ts  procedure-yaml.spec.ts  procedures.spec.ts  run-status.spec.ts  runs.spec.ts
frontend/fixtures/: README.md  active_runs.json  admin_compliance_requests.json  admin_stats.json  admin_users.json  compliance.json  compliance_requests.json  config.json  generate.py  playlist_sessions.json  playlist_tests.json  procedure_runs.json  procedure_summaries.json  procedure_yaml.json  procedures.json  run_groups.json  run_request_details.json  run_status_runner.json  run_status_runner_initialised.json  run_status_shell.json  run_status_shell_finalised.json  run_status_shell_playlist.json  session.json  session_admin.json  session_unauthenticated.json
frontend/scripts/: generate-types.mjs
frontend/src/: main.tsx  router.tsx  theme.ts
frontend/src/api/: admin.ts  client.ts  compliance.ts  config.ts  playlists.ts  procedures.ts  runGroup.ts  runStatus.ts  runs.ts  session.ts  types.ts
frontend/src/components/: ActionButton.tsx  AdminComplianceRequestTable.tsx  AdminWizardPager.tsx  Banner.tsx  CategoryAccordion.tsx  ComplianceFilter.tsx  ComplianceLibrary.tsx  ComplianceRequestTable.tsx  ComplianceRequestWizard.tsx  ComplianceRequestWizardPager.tsx  CopyButton.tsx  DateCell.tsx  DerDetailsStep.tsx  ErrorAlert.tsx  FieldRow.tsx  Footer.tsx  InfoPopover.tsx  Layout.tsx  ModalButton.tsx  NavBar.tsx  NewRequestButton.tsx  PageHeader.tsx  PageSpinner.tsx  PrefillDialog.tsx  RunSelectionStep.tsx  ScrollCard.tsx  SectionCard.tsx  SoftwareClientDetailsStep.tsx  StandardStep.tsx  Wizard.tsx  WizardPager.tsx  categoryAccordion.module.css  complianceLibrary.module.css  useConfirm.tsx
frontend/src/hooks/: useDisclosure.ts  useMutationSafe.ts  useSession.ts
frontend/src/mocks/: handlers.ts
frontend/src/pages/: AdminCompliancePage.tsx  AdminPage.tsx  AdminStatsPage.tsx  CompliancePage.tsx  ComplianceRequestPage.tsx  ConfigPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProcedureYamlPage.tsx  ProceduresPage.tsx  RunGroupPage.tsx
frontend/src/pages/AdminStats/: AdminStatsPage.tsx  Overview.tsx  ProcedureTable.tsx  SummaryCard.tsx  UserLeaderboard.tsx  WeekBars.tsx
frontend/src/pages/Compliance/: CompliancePage.tsx  ComplianceRequestPage.tsx  status.ts
frontend/src/pages/Config/: CertModal.tsx  ConfigPage.tsx  DeleteModal.tsx  DeviceCapabilityCard.tsx  DomainCard.tsx  GettingStartedChecklist.tsx  IdentityCard.tsx  OrganisationCard.tsx  PenCard.tsx  RunGroupsCard.tsx  SharedCertButton.tsx  SharedCertMenu.tsx  UtilityServerCertCard.tsx
frontend/src/pages/Home/: HomePage.tsx
frontend/src/pages/Login/: LoginPage.tsx
frontend/src/pages/Playlists/: PlaylistQueue.tsx  PlaylistSessions.tsx  PlaylistsIntro.tsx  PlaylistsPage.tsx  PlaylistsRedirect.tsx  StatusDots.tsx  TestLibrary.tsx  statusDots.ts  testLibrary.module.css
frontend/src/pages/Procedures/: ProceduresPage.tsx
frontend/src/pages/RunGroup/: RunGroupPage.tsx
frontend/src/pages/RunStatus/: FinalisedView.tsx  LiveHeaderCard.tsx  LiveStatusPanels.tsx  MetadataCard.tsx  NotYetActiveAlert.tsx  (+10 more)
frontend/src/utils/: complianceRequestForm.ts  complianceRequestWizard.ts  dates.ts  status.ts
frontend/tests/: admin-stats.test.tsx  admin.test.tsx  app.test.tsx  compliance.test.tsx  config.test.tsx  dates.test.ts  jsdom-undici.ts  msw-server.ts  playlists.test.tsx  procedure-yaml.test.tsx  procedures.test.tsx  run-group.test.tsx  run-status.test.tsx  runs.test.tsx  setup.ts  test-utils.tsx  timeline-chart.test.tsx
scripts/: export_api_schema.py
src/cactus_ui/: __init__.py  api_models.py  auth.py  common.py  compliance_class.py  mock.py  orchestrator.py  presenters.py  server.py
src/cactus_ui/static/: .gitignore  prerender.py
src/cactus_ui/templates/: admin.html  admin_stats.html  banner.html  base.html  certificate.html  compliance.html  compliance_request.html  config.html  domain.html  home.html  login.html  playlists.html  procedure_yaml.html  procedures.html  run.html  run_group.html  run_status.html  runs.html
tests/unit/cactus_ui/: test_common.py  test_compliance_class.py  test_fixtures_match_schema.py  test_orchestrator.py  test_server_api.py  test_server_api_admin.py  test_server_api_compliance.py  test_server_api_config.py  test_server_api_playlists.py  test_server_api_run_group.py  test_server_api_run_status.py  test_server_api_runs.py
(+7 files in other folders)
