[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus-ui"
dynamic = ["version", "readme"]
requires-python = ">= 3.12"
description = "A web user interface for the CSIP Aus test harness"
dependencies = [
    "flask",
    "python-dotenv",
    "authlib",
    "requests",
    "pyjwt",
    "cactus-schema>=0.0.19",
]


[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "coverage",
    "types-requests",
    "types-Authlib",
]
test = ["pytest", "pytest-env"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cactus_ui" = [
    "py.typed",
    "templates/*.html",
    "static/js/*",
    "static/*.png",
    "static/*.ico",
    "static/site.webmanifest",
]

[tool.setuptools.dynamic]
version = { attr = "cactus_ui.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "C90", "B"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"
env = ["D:CACTUS_ORCHESTRATOR_BASEURL=http://localhost/"]

[tool.mypy]
exclude = ["tests", "dist", "build"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true
