[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus-ui"
dynamic = ["version", "readme"]
requires-python = ">= 3.12"
description = "A web user interface for the CSIP Aus test harness"
dependencies = [
    "flask",
    "python-dotenv",
    "authlib",
    "requests",
    "pyjwt",
    "cactus-schema==1.1.0",
]


[project.optional-dependencies]
dev = [
    "bandit",
    "ruff",
    "ty",
    "coverage",
    "types-requests",
    "types-Authlib",
    "pydantic",
]
test = ["assertical", "pytest", "pytest-env", "pytest-xdist", "pytest-cov", "pydantic"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cactus_ui" = [
    "py.typed",
    "static/*.png",
    "static/*.ico",
    "static/site.webmanifest",
]

[tool.setuptools.dynamic]
version = { attr = "cactus_ui.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "C90", "B", "UP", "ANN", "N"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN", "N"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"
env = [
    "D:CACTUS_ORCHESTRATOR_BASEURL=http://localhost/",
    "D:CACTUS_ORCHESTRATOR_AUDIENCE=http://localhost/",
    "D:CACTUS_PLATFORM_VERSION=v0.0.0-test",
    "D:CACTUS_PLATFORM_SUPPORT_EMAIL=support@example.com",
    "D:APP_SECRET_KEY=test-secret-key-for-flask-sessions",
]

